[BOOT-12-37] Teste de mutação criado